# renovate-pep420-namespace-package

./: README.rst  pyproject.toml
src/testing/test_project/: test_project.py
